# digestive-bootstrap

./: .travis.yml  LICENSE  README.md  digestive-bootstrap.cabal  stack.yaml
src/Text/Digestive/: Bootstrap.hs
